# codeACE

./: .gitignore  ACE_CLI_Implementation_Summary.md  ACE_Config_Implementation_Summary.md  ACE_Development_Master_Plan.md  ACE_E2E_Test_Report.md  ACE_MVP_Bullet_Implementation_Plan.md  ACE_MVP_Implementation_Summary.md  ACE_Manual_Test_Results.md  ACE_Phase1_Final_Summary.md  ACE_Runtime_Integration_Test_Report.md  AGENTS.md  GITHUB_PUSH_GUIDE.md  README.md  ace-config-example.toml  check-git-status.sh  readme-codeACE.md
codex-cli/: README.md
codex-rs/: .gitignore  Cargo.toml  README.md
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  mcp_cmd.rs
codex-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
codex-rs/codex-ace/: Cargo.toml
codex-rs/codex-ace/src/: context.rs  lib.rs  reflector.rs  storage.rs  types.rs
codex-rs/common/src/: config_override.rs
codex-rs/core/: Cargo.toml  README.md  gpt_5_codex_prompt.md  prompt.md
codex-rs/core/examples/: ace_diagnosis.rs  test_bullet_format.rs  test_query.rs
codex-rs/core/src/: chat_completions.rs  client.rs  codex.rs  custom_prompts.rs  hooks.rs  lib.rs  llm_logger.rs  message_history.rs  model_provider_info.rs  response_processing.rs  safety.rs
codex-rs/exec/: Cargo.toml
codex-rs/tui/: Cargo.toml  styles.md
docs/: ACE_Configuration_Guide.md  advanced.md  agents_md.md  authentication.md  config.md  example-config.md  faq.md  getting-started.md  prompts.md  readme-zh.md
releases/v1.0/: BUILD_INFO.md  RELEASE_v1.0.md  SHA256SUMS.txt
sdk/typescript/: README.md
(+48 files in other folders)
