[package]
name = "codex-ace"
version.workspace = true
edition.workspace = true

[lib]
name = "codex_ace"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# 核心依赖
codex-core = { path = "../core", features = ["ace"] }
codex-protocol = { path = "../protocol" }

# 异步运行时
tokio = { workspace = true, features = ["full"] }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# 日期时间
chrono = { workspace = true, features = ["serde"] }

# UUID生成
uuid = { workspace = true, features = ["v4", "serde"] }

# 日志
tracing = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 正则表达式（用于模式提取）
regex = "1.10"

# 路径展开
shellexpand = "3.1"

# CLI支持（可选）
clap = { workspace = true, optional = true }

[features]
default = []
cli = ["clap"]  # CLI命令支持

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }